# can-frame-interpreter

./: CMakeLists.txt  CMakeSettings.txt  package.xml
include/: frameInterpreter.h  interface.h  joint.h  motor.h  motorInterface.h  motorManager.h  motor_commands.h
include/usb_can_2_socketcan/: socketcan.h  usbcan.h  utils.h
src/: frameInterpreter.cpp  joint.cpp  motor.cpp  motorInterface.cpp  motorManager.cpp  socketcan.cpp  usbcan.cpp  usbcan2socketcan.cpp
